@@ -55,8 +55,10 @@ void WorldSession::HandleDuelAcceptedOpcode(WorldPacket& recvPacket)
     {
         player->SetHealth(player->GetMaxHealth());
         plTarget->SetHealth(plTarget->GetMaxHealth());
-        player->RemoveArenaSpellCooldowns();
-        plTarget->RemoveArenaSpellCooldowns();
+        player->RemoveArenaSpellCooldowns(true);
+        plTarget->RemoveArenaSpellCooldowns(true);
+        player->RemoveArenaAuras();
+        plTarget->RemoveArenaAuras();
         player->RemoveAurasDueToSpell(25771);
         plTarget->RemoveAurasDueToSpell(25771);
 
